GNOME Bugzilla – Bug 736915
window: Fix titlebar_is_onscreen() test
Last modified: 2014-09-22 18:19:55 UTC
See patch.
Created attachment 286515 [details] [review] window: Fix titlebar_is_onscreen() test The titlebar rect is in window coordinates, while screen regions are obviously not. Fix by translating into screen coordinates before testing for overlaps.
Review of attachment 286515 [details] [review]: Whoops, yeah.
Created attachment 286517 [details] [review] constraints: Fix update_onscreen_requirements() Another missing translation into screen coordinates ...
Review of attachment 286517 [details] [review]: LG.
Attachment 286515 [details] pushed as 73ca0ef - window: Fix titlebar_is_onscreen() test Attachment 286517 [details] pushed as 90bd02f - constraints: Fix update_onscreen_requirements()